# bsu-labs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cpp/: CMakeLists.txt
cpp/labs/functions/: functions.h
cpp/labs/lab_5/: equations.cpp
cpp/labs/lab_7/: students.cpp
cpp/notepad-app/: README.md
cpp/notepad-app/src/notepad/command/: Command.h  CreateCommand.h  ExitCommand.h  GetOneCommand.h  NoneCommand.h
cpp/notepad-app/src/notepad/entity/: Note.h  Notepad.h
cpp/notepad-app/src/notepad/exception/: EmptyVectorException.h  NumberFormatException.h  OperationExistsException.h
cpp/notepad-app/src/notepad/repository/: NotepadRepository.h
java/lab-1/: pom.xml
java/lab-2/: pom.xml
java/lab-2/containers/: pom.xml
java/lab-2/main/: pom.xml
java/lab-2/processors/: pom.xml
java/lab-2/storage/: pom.xml
js/: package-lock.json  package.json
js/src/: gaussian.js  gaussian.spec.js  service.js  service.spec.js
js/src/approximation/: approximation.js
js/src/assets/: matrix_without_solution-2.txt
js/src/euler/: euler.js  example.txt  example2.txt
js/src/gaussian/: gaussian.js  gaussian.spec.js  ldlt.js  ldlt.spec.js
js/src/integral/: integral.js  integral.spec.js
js/src/newton/: newton.js  newton.spec.js
libs/cereal/1.3.0/: INSTALL_RECEIPT.json
src/app/: main.cpp
src/app/lab_5/: sorting.cpp
src/app/lab_6/: database.cpp  numbers.cpp
src/app/lab_7/: stack.cpp
src/app/lab_8/: student.cpp  word.cpp
src/app/notepad-app/src/: ConsoleHelper.h  NotepadApplication.cpp
src/app/students/: students.h
(+30 files in other folders)
